--- a/Card - Gradiend Border/css/style.css
+++ b/Card - Gradiend Border/css/style.css
@@ -86,7 +86,7 @@ body{
 	padding: 20px 40px;
 }
 .container .box .content h2{
-	font-size: 1.1em;
+	/*font-size: 1.1em;*/
 	color:#fff;
 	margin-bottom: 10px;
 }
@@ -97,11 +97,12 @@ body{
 	line-height: 1.4em;
 }
 .container .box .content a{
-	display:inline-block;
-	font-size: 1.1em;
-	color:#111;
-	background: #fff;
-	padding: 10px;
-	text-decoration: none;
-	font-weight: 700;
+	display: inline-block;
+    font-size: 1.1em;
+    color: #111;
+    background: #ffffff;
+    padding: 15px;
+    text-decoration: none;
+    font-weight: 600;
+    border-radius: 20px;
 }
