--- a/Card Hover Effect V/css/style.css
+++ b/Card Hover Effect V/css/style.css
@@ -43,10 +43,10 @@ body{
 }
 .container .card .imgBx{
   position: relative;
-  /* height: 260px; */
-  width: 260px;
+  height: 260px;
+  /* width: 260px; */
   top:-60px;
-  left:20px;
+  /* left:20px; */
   z-index: 1;
   box-shadow: 0 5px 20px rgba(0,0,0,0.2);
 }
